--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -25,7 +25,7 @@ jobs:
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v2
         with:
-          github_user_name: lhc0240 (ex: yspark2)
+          github_user_name: HyeonchanLim (ex: yspark2)
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
